--- a/TaskManager/TaskManager/Views/Token/Token.cshtml
+++ b/TaskManager/TaskManager/Views/Token/Token.cshtml
@@ -1,6 +1,10 @@
 ﻿@{
     Layout = "_userLayout";
 }
-<h1>Your token is here, @User.Identity.Name:</h1>
-<p id="token"> @ViewData["token"]</p>
-<h2>Be aware that this will expire in a day.</h2>
+    <div class="displayCardsContainer narrowContainer firstContainer">
+        <div class="displayCard">
+            <div class="title">Your token is here, @User.Identity.Name:</div>
+            <p id="token"> @ViewData["token"]</p>
+            <div class="description">Be aware that this will expire in a day.</div>
+        </div>
+    </div>
