--- a/TaskManager/TaskManager/Views/Project/_CardsPartial.cshtml
+++ b/TaskManager/TaskManager/Views/Project/_CardsPartial.cshtml
@@ -2,22 +2,25 @@
 @using TodoWithDatabase.Models.DAOs.JoinTables;
 
 @{ foreach (Card card in (List<Card>)ViewData["cards"])
-    {
-    <ul class="displayCard">
-        <li class="stats">
-            <p class="@(@card.Deadline < DateTime.Now && @ViewData["toggleName"].Equals("mark as done")? "pastDeadline" : "deadline")">               
-               deadline: @card.Deadline
-            </p>
-            <a class="toggleDone" href="@card.Project.Id/cards/@card.Id/toggleDone">@ViewData["toggleName"]</a>
-        </li>
-        <li class="title titleToBeCentered">@card.Title</li>
-        <li class="description">@card.Description</li>
-        <li class="responsibles">
-            @foreach (AssigneeCard assigneeCard in card.AssigneeCards)
+   {
+       <ul class="displayCard">
+           <li class="stats">
+               <p class="@(@card.Deadline < DateTime.Now && @ViewData["toggleName"].Equals("mark as done")? "pastDeadline" : "deadline")">
+                   deadline: @card.Deadline
+               </p>
+               <a class="toggleDone" href="@card.Project.Id/cards/@card.Id/toggleDone">@ViewData["toggleName"]</a>
+           </li>
+           <li class="title titleToBeCentered">@card.Title</li>
+           <li class="description">@card.Description</li>
+           @if (((Project)ViewData["project"]).AssigneeProjects.Count() > 1)
             {
-                <span class="responsibleName">@assigneeCard.Assignee.UserName</span>
+                <li class="responsibles">
+                @foreach (AssigneeCard assigneeCard in card.AssigneeCards)
+                 {
+                       <span class="responsibleName">@assigneeCard.Assignee.UserName</span>
+                 }
+                </li>
             }
-        </li>
-    </ul>
-    }
+       </ul>
+   }
 }
