--- a/TaskManager/TaskManager/Views/Project/_CardsPartial.cshtml
+++ b/TaskManager/TaskManager/Views/Project/_CardsPartial.cshtml
@@ -3,9 +3,9 @@
 
 @{ foreach (Card card in (List<Card>)ViewData["cards"])
    {
-       <ul class="displayCard">
+       <ul class="displayCard @(ViewData["toggleName"].Equals("mark as done") ? "toDoCard" : "doneCard")">
            <li class="stats">
-               <p class="@(@card.Deadline < DateTime.Now && @ViewData["toggleName"].Equals("mark as done")? "pastDeadline" : "deadline")">
+               <p class="@(@card.Deadline < DateTime.Now && @ViewData["toggleName"].Equals("mark as done") ? "pastDeadline" : "deadline")">
                    deadline: @card.Deadline
                </p>
                <a class="toggleDone" href="@card.Project.Id/cards/@card.Id/toggleDone">@ViewData["toggleName"]</a>
