--- a/TaskManager/TaskManager/Views/Shared/_userLayout.cshtml
+++ b/TaskManager/TaskManager/Views/Shared/_userLayout.cshtml
@@ -10,7 +10,11 @@
                 </a>
             </div>
             <div>
-                <p>@User.Identity.Name as @(User.IsInRole("TodoAdmin") ? "Admin" : "User")</p>
+                @{var role = ViewData["role"] == null ?
+                            (User.IsInRole("TodoAdmin") ? "Admin" : "User") :
+                            ViewData["role"];
+                    <p>@User.Identity.Name as @role</p>
+                }
                 <a href="/users/changeRole">Change role</a>
                 <a class="logout" href="/logout">Sign out</a>
             </div>
